@@ -1,4 +1,5 @@
 180725
+	- asm.c, main.c: punch object deck
 	- run.c: count XEQuted instruction time
 	- run.c, io.c: added wait state, interrupts are serviced by priority
 	- mix.h: device types are reordered by priority
